--- a/textiles_hanging/requirements.txt
+++ b/textiles_hanging/requirements.txt
@@ -17,6 +17,7 @@ protobuf==3.6.1
 pyparsing==2.3.1
 python-dateutil==2.8.0
 PyYAML==3.13
+scikit-learn==0.20.2
 scipy==1.2.1
 six==1.12.0
 tensorboard==1.12.2
