--- a/textiles_hanging/requirements.txt
+++ b/textiles_hanging/requirements.txt
@@ -8,9 +8,9 @@ decorator==4.3.2
 gast==0.2.2
 grpcio==1.18.0
 h5py==2.9.0
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
+Keras
+Keras-Applications
+Keras-Preprocessing
 kiwisolver==1.0.1
 Markdown==3.0.1
 matplotlib==3.0.2
@@ -27,8 +27,8 @@ scikit-image==0.14.2
 scikit-learn==0.20.2
 scipy==1.2.1
 six==1.12.0
-tensorboard==1.12.2
-tensorflow==1.12.0
+tensorboard
+tensorflow
 termcolor==1.1.0
 toolz==0.9.0
 tqdm==4.31.1
